# ursa-evaluations

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml
scripts/: canonicalize-stock.py  check-canon.py  process-dms-predictions.py  verify-hash.py
scripts/aizynthfinder/: download-data.py  make-stock.py  process-aizynth-predictions.py  run-aizyn-mcts.py  run-aizyn-retro-star.py
scripts/dms/: combine-results.py  prep-dms.sh  process-dms-predictions.py  run-dms-predictions.py
src/batistatemplate/utils/: logging_config.py
src/ursa/: core.py  exceptions.py  io.py  typing.py
src/ursa/adapters/: aizynth_adapter.py  base_adapter.py  dms_adapter.py
src/ursa/domain/: chem.py  schemas.py  tree.py
src/ursa/utils/: hashing.py
tests/: conftest.py  test_core.py  test_io.py
tests/adapters/: test_aizynth_adapter.py  test_dms_adapter.py
tests/domain/: test_chem.py  test_schemas.py  test_tree.py
tests/utils/: test_hashing.py
