[project]
name = "ursa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "rdkit>=2025.3.3",
    "tqdm>=4.67.1",
]
authors = [{ name = "Anton Morgunov", email = "anton@ischemist.com" }]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/batistagroup/ursa"
Issues = "https://github.com/batistagroup/ursa/issues"


[tool.setuptools]
package-dir = { "" = "src" }


[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "rich>=13.9.4",
    "pre-commit",
    "ruff",
    "pytest",
    "mypy",
    "types-tqdm>=4.67.0.20241221",
    "pytest-cov",
    "pytest-mock>=3.14.1",
]
dms = [
    "directmultistep",
]


[tool.uv.sources]
directmultistep = { git = "https://github.com/batistagroup/DirectMultiStep/", branch = "main"}
dgl = {url ="https://data.dgl.ai/wheels/dgl-2.2.1-cp311-cp311-macosx_11_0_arm64.whl"}

[tool.uv]
conflicts = [
    [
      { extra = "dms" },
      { extra = "syntheseus" },
      { extra = "synpa" },
    ],
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests"]
disable_error_code = ["unused-ignore"]

[[tool.mypy.overrides]]
# RDKit is not typed, so we ignore all errors in it
module = ["rdkit-stubs.*", "rdkit.*"]
ignore_errors = true

[tool.ruff]
line-length = 120
lint.select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
lint.ignore = ["E501"] 
